added type in string check

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     [ngxRouteHighlighter]='ngxRouteHoghlighter.getNormalConfig(["/test-1","/test-2","/test-3","/test-4"])'>
     parent
   </li>
-  <li [routerLink]="['test-2']"
-    [ngxRouteHighlighter]='ngxRouteHoghlighter.getNormalConfig(["/test-2/*","/test-3","/test-4"])'>
+  <li [routerLink]="['test-2/2342423/25352342']"
+    [ngxRouteHighlighter]='ngxRouteHoghlighter.getNormalConfig(["/test-2/*/*","/test-3","/test-4"])'>
     child
   </li>
   <li [routerLink]="['test-3']" [ngxRouteHighlighter]='ngxRouteHoghlighter.getNormalConfig(["/test-3","/test-4"])'>
